# python-rye-template

./: Dockerfile  README.md  pyproject.toml
