[project]
name = "python-rye-template"
version = "0.1.0"
description = "A Project Template of Python with Rye"
authors = [{ name = "杜世橋 Du Shiqiao", email = "lucidfrontier.45@gmail.com" }]
dependencies = ["fastapi>=0.110.1"]
requires-python = ">=3.11"

[project.optional-dependencies]
server = ["fastapi[standard]>=0.110.1", "uvicorn>=0.29.0"]

[project.scripts]
app = "app.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.3.7",
    "pyright>=1.1.358",
    "pytest-cov>=5.0.0",
    "uvicorn>=0.29.0",
]
# set the following line to false if it's a library project
virtualenv = true

[tool.rye.scripts]
pyright_lint = "pyright ."
ruff_format = "ruff format ."
ruff_lint = "ruff check ."
ruff_fix = "ruff check --fix-only ."
test = "pytest tests --cov=app --cov-report=term --cov-report=xml"
format = { chain = ["ruff_fix", "ruff_format"] }
lint = { chain = ["ruff_lint", "pyright_lint"] }
check = { chain = ["format", "lint", "test"] }

[tool.pytest.ini_options]
filterwarnings = ["ignore::FutureWarning"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W"]
# add directory names to exclude from analysis
exclude = ["deps"]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ['F401']

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
# add directory names to exclude from analysis
ignore = ["deps"]
